fix(magda) scroll boxes if 2 in a row on mobile

--- a/src/assets/style/components/_forms.scss
+++ b/src/assets/style/components/_forms.scss
@@ -140,6 +140,17 @@
 }
 
 form.cms {
+  ::-webkit-scrollbar {
+    height: 8px;
+    width: 8px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent; 
+  }
+  ::-webkit-scrollbar-thumb {
+    background: $crl-base-blue; 
+    border-radius: 2px;
+  }
   .main-title {
     width: 95%;
     max-width: 500px;
@@ -149,17 +160,19 @@ form.cms {
     font-size: 1.3rem;
   }
   .form-container {
-    padding: 0 1%;
+    padding: 1% 3%;
     width: 100%;
     max-width: 1200px;
     display: grid;
     grid-template-columns: 50% 50%;
     grid-gap: 10px;
     justify-content: center;
-    align-items: center;
     margin: auto {
       bottom: 20px;
     }
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 270px;
     
   }
   .form-control {
@@ -179,6 +192,9 @@ form.cms {
     }
     &:nth-child(8){
       z-index: 8;
+    }
+    &:last-child {
+      margin-bottom: 200px;
     }
   }
   .form-info {
@@ -251,9 +267,17 @@ form.cms {
     z-index: 1;
     padding: 0;
   }
-  @media (min-width: 500px) {
+  @media (min-width: 730px) {
     .form-container {
       grid-template-columns: repeat(auto-fit, minmax(150px, 200px));
+      overflow: visible;
+    height: min-content;
     }
+    .form-control {
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+   
   }
 }
